# badge-maker

./: .gitignore  Cargo.toml  LICENSE  README.md
benches/: bench.rs  create_accessible.rs  hex.rs  render_attributes.rs  render_badge.rs  render_text.rs  render_title.rs  xml.rs
fonts/: helvetica-11px-bold.bincode  verdana-10px-bold.bincode  verdana-10px-normal.bincode  verdana-11px-normal.bincode
src/: lib.rs  main.rs
src/badge/: badge.rs  badge_builder.rs  links.rs  logo.rs  mod.rs  style.rs
src/badge/color/: color.rs  mod.rs  parser.rs  util.rs
src/error/: mod.rs
src/render/: base.rs  mod.rs
src/render/font/: char_datum.rs  font.rs  mod.rs  util.rs
src/render/renderers/: attributes.rs  badge.rs  links.rs  logo.rs  mod.rs  text.rs  title.rs
src/render/renderers/styles/: flat.rs  flat_square.rs  mod.rs  plastic.rs
src/render/util/: mod.rs  round.rs  text.rs  xml.rs
tests/: constants.rs  e2e.rs
tests/node_badge_maker/: index.js  package-lock.json
