[package]
name = "badge-maker"
version = "0.1.2"
authors = ["Chris Burgess <cgburgess10@gmail.com>"]
description = "It makes badges."
homepage = "https://github.com/cgburgess/badge-maker"
repository = "https://github.com/cgburgess/badge-maker"
edition = "2018"
license = "MIT"
readme = "README.md"
keywords = ["badge", "maker", "svg", "shield"]
include = ["src/", "Cargo.toml", "fonts/verdana-11px-normal.bincode"]

[features]
default = []
cli = ["clap"]

[dependencies]
lazy_static = "1.4.0"
regex = "1.4.3"
thiserror = "1.0.23"
serde = { version= "1.0.118", features = ["derive"]}
bincode = "1.3.1"
aho-corasick = "0.7.15"
seahash = "4.0.1"
clap = {version = "3.0.0-beta.2", optional = true}
itoa = "0.4.7"

[[bench]]
name = "bench"
path = "benches/bench.rs"
harness = false

[dev-dependencies]
criterion = "0.3"
byte-unit = "4.0.9"
itertools = "0.10.0"
